--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,8 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Chào mừng đến với LOS (hanoi)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Chào mừng đến với LOS (hanoi).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="facebook2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\facebook2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Nội dung UC triết lý" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Document.rtf;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
@@ -129,5 +129,11 @@
   </data>
   <data name="SVN_Avo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SVN-Avo.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Chào mừng đến với LOS (hanoi)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Chào mừng đến với LOS (hanoi).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="discord" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\discord.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
