--- a/UC_gặp_nhau.resx
+++ b/UC_gặp_nhau.resx
@@ -59,10 +59,10 @@
   </resheader>
   <data name="textBoxGặpNhau.Text" xml:space="preserve">
     <value>Các cuộc gặp nhau trực tiếp hoặc online sẽ được tổ chức vào
-thời điểm nhiều người tham gia được nhiều nhất. Cũng sẽ có 
+thời điểm nhiều người tham gia được nhiều nhất. Cũng sẽ có
 những buổi ưu tiên cho những người người ít khi nào rảnh vào
-những buổi nhiều người rảnh. Tham gia vào cộng đồng Quả 
-Cầu trên Facebook hoặc Discord để chọn lịch cho buổi tiếp
-theo hoặc nắm bắt những gì đã diễn ra vào các buổi trước.</value>
+những buổi nhiều người rảnh. Tham gia vào cộng đồng Quả Cầu
+trên Facebook hoặc Discord để chọn lịch cho buổi tiếp theo và
+nắm được những gì đã diễn ra vào các buổi trước.</value>
   </data>
 </root>
